# modular-arithmetic

./: CMakeLists.txt  README.md  main.cpp  my_task.hpp  rns.cpp  rns.hpp
